<resources>
    <string name="app_name">BrigadaUniversitaria</string>
    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_navigator">NavigatorActivity</string>
    <string name="nav_header_title">Brigada Universitaria</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_mapa">Mapa</string>
    <string name="menu_chat">Chat</string>
    <string name="menu_perfil">Perfil</string>
    <string name="menu_notif">Notificaciones</string>

    <string name="menu_ubicacion">Ubicacion</string>
    <string name="menu_sincronizar">Sincronizar ubicación</string>
    <string name="menu_auto_sin">Sincronización automatica</string>
    <string name="menu_compartir_ruta">Compartir ruta</string>


    <string name="seg_emer">Seguridad y Emergencias</string>
    <string name="chat">Chat</string>
    <string name="menu_locales">Autoridades locales</string>

    <string name="conf">Ayuda y Configuración</string>
    <string name="menu_contactos">Contactos de ayuda</string>
    <string name="menu_informacion">Información</string>
    <string name="close">Cerrar sesión</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="chat_nombre">nombre</string>
    <string name="chat_cont">0</string>
    <string name="chat_mensaje">mesaje</string>
    <string name="welcome">Preparando todo&#8230;</string>
    <!-- string app -->
    <string name="about_messaggi_description">La marca Texting y el logo son propiedad de Cursos
        Android ANT. Todos los derechos reservados.</string>
    <string name="about_privacy">Aviso de privacidad</string>
    <string name="about_version">Version:</string>
    <string name="about_webSite">www.texting.cursos-android-ant.com</string>

    <string name="common_error_server">Ha ocurrido un problema en el servidor, intente más tarde.</string>
    <string name="common_label_ok">OK</string>
    <string name="common_label_accept">Aceptar</string>
    <string name="common_label_cancel">Cancelar</string>
    <string name="common_label_email">Correo electrónico</string>
    <string name="common_message_noInternet">Sin acceso a internet, verifique su conexión</string>
    <string name="common_validate_field_required">Este campo es requerido.</string>
    <string name="common_validate_email_invalid">Este correo no tiene un formato valido, verifique.</string>

    <string name="description_img_sendMessage">Enviar mensaje</string>
    <string name="description_img_gellery">Seleccionar imagen desde la Galería.</string>
    <string name="description_img_profile">Imagen de perfil de usuario.</string>

    <string name="addFriend_error_message">Imposible enviar solicitud, intente más tarde.</string>
    <string name="addFriend_message_request_dispatched">Solicitud enviada exitosamente</string>
    <string name="addFriend_title">Añadir amigo</string>

    <string name="chat_dialog_sendImage_title">Enviar imagen</string>
    <string name="chat_dialog_sendImage_message">Â¿Deseas enviarle esta imagen a %s?</string>
    <string name="chat_dialog_sendImage_accept">Enviar</string>
    <string name="chat_error_imageUpload">Error al enviar la imagen, intente mas tarde.</string>
    <string name="chat_error_permission_denied">Ya no eres amigo de esta persona, envia otra solicitud para volver a platicar.</string>
    <string name="chat_status_connected">Conectado</string>

    <string name="login_error_user_exist">Usuario nuevo, registrando&#8230;></string>
    <string name="login_message_loading">Iniciando sesión&#8230;</string>
    <string name="login_message_starting">Preparando todo&#8230;</string>
    <string name="login_message_error">Imposible iniciar sesión, intente más tarde.</string>
    <string name="login_message_success">Bienvenido %s</string>

    <string name="main_dialog_accept">Eliminar</string>
    <string name="main_dialog_message_confirmDelete">¿Estas seguro que quieres quitar a %s de tus amigos?
        \nSus conversaciones no se eliminarán permanentemente.</string>
    <string name="main_dialog_title_confirmDelete">Eliminar amigo</string>
    <string name="main_error_permission_denied">Cerrando&#8230;</string>
    <string name="main_menu_about">Acerca de</string>
    <string name="main_menu_action_singoff">Cerrar sesión</string>
    <string name="main_message_request_accepted">Ahora %s y tu son amigos.</string>
    <string name="main_message_request_denied">Solicitud rechazada.</string>
    <string name="main_message_user_removed">Listo! Ya no son amigos.</string>
    <string name="main_title">Amigos</string>

    <string name="profile_title">Perfil</string>
    <string name="profile_dialog_title">Actualizar imagen de perfil</string>
    <string name="profile_dialog_message">Â¿Desea subir esta imagen a su perfil de usuario?</string>
    <string name="profile_dialog_accept">Subir</string>
    <string name="profile_error_userUpdated">Error al actualizar el usuario, intente mas tarde.</string>
    <string name="profile_error_imageUpdated">Error al actualizar la imagen de perfil. intente mas tarde.</string>
    <string name="profile_error_invalid_image">Esta imagen no se pudo procesar.</string>
    <string name="profile_error_notfound">Imagen/archivo no encontrado.</string>
    <string name="profile_hint_username">username</string>
    <string name="profile_message_userUpdated">Usuario actualizado correctamente.</string>
    <string name="profile_message_imageUploading">Cambiando imagen de perfil, espere&#8230;</string>
    <string name="profile_message_imageUpdated">Imagen de perfil actualizada exitosamente.</string>
    <string name="chat_email">Email</string>
    <string name="main_item_max_messageUnread">99+</string>
    <string name="title_activity_main">MainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="addFriend_error_user_exist">No hay ningún usuario con este email.</string>
    <string name="addFriend_message_request_exist">Lo siento, tu solicitud ya habia sido enviada.</string>
    <string name="friendAdded_message_request_exist">Lo siento, ya tienes agregado a este usuario.</string>
    <string name="chat_numero">numero telefonico</string>
    <string name="informacio">agregar textview unicamente para presentar infromacion del sistema</string>
    <string name="chat_status_last_connection">Ultima conexión: %s</string>
    <string name="common_error_process_data">ERROR INTERNO.</string>
    <string name="common_error_volley">Error interno en el servido, intete mas tarde.</string>
    <string name="chat_error_method_not_exist">Imposible notificar al usuario , contacte a su administrador.</string>
    <string name="autocmplete">Seleciona</string>
    <string name="description">Descripcion</string>
    <string name="titulo">Información de la aplicación</string>
    <string name="proyecto">NOMBRE: BRIGADA UNIVERSITARIA</string>
    <string name="version">Version: 1.0.0.0</string>

    <string name="titulo_desarrollador">Desarrolladores</string>
    <string name="ricardo">RICARDO ENRIQUE ALCALA MENDEZ</string>
    <string name="yonathan">TOVAR DIAZ YONATHAN ALEJANDRO</string>
    <string name="alexis">FRANCISCO ALEXIS CRUZ LEAL</string>

    <string name="Contenido">Contenido en línea</string>
    <string name="privacidad">Politicas de privacidad</string>
    <string name="derecho">Politica de derechos de autor</string>
    <string name="terminos">Terminos de servicio</string>


</resources>