<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_map"
            android:icon="@drawable/ic_menu_map"
            android:title="@string/menu_mapa" />


        <item
            android:id="@+id/nav_perfil"
            android:icon="@drawable/ic_menu_perfil"
            android:title="@string/menu_perfil" />


    </group>


    <item android:title="@string/seg_emer">

        <menu>

            <item
                android:id="@+id/nav_chat"
                android:icon="@drawable/ic_menu_chat"
                android:title="@string/chat" />

            <item
                android:id="@+id/nav_locales"
                android:icon="@drawable/ic_menu_locales"
                android:title="@string/menu_locales" />
        </menu>
    </item>

        <item android:title="@string/conf">

            <menu>



                <item
                    android:id="@+id/nav_informacion"
                    android:icon="@drawable/ic_menu_info"
                    android:title="@string/menu_informacion" />
                <item
                    android:id="@+id/nav_close"
                    android:icon="@drawable/ic_menu_close"
                    android:title="@string/close" />
            </menu>
        </item>
</menu>
