<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/nav_map">
    <fragment
        android:id="@+id/nav_map"
        android:name="com.example.brigadauniversitaria.Fragments.MapsFragment"
        android:label="Mapa"
        tools:layout="@layout/fragment_maps" />

    <fragment
        android:id="@+id/nav_perfil"
        android:name="com.example.brigadauniversitaria.profileModule.view.PerfilFragment"
        android:label="@string/menu_perfil"
        tools:layout="@layout/fragment_perfil" />

    <!--fragment
        android:id="@+id/nav_notif"
        android:name="com.example.brigadauniversitaria.Fragments.NotifFragment"
        android:label="@string/menu_notif"
        tools:layout="@layout/fragment_notif" /-->

    <fragment
        android:id="@+id/nav_chat"
        android:name="com.example.brigadauniversitaria.mainModule.view.MainFragment"
        android:label="@string/menu_chat"
        tools:layout="@layout/fragment_chat" />



    <fragment
        android:id="@+id/nav_locales"
<<<<<<< HEAD
        android:name="com.example.brigadauniversitaria.Fragments.LocalesFragment"
=======
        android:name="com.example.brigadauniversitaria.localModule.LocalesFragment"
>>>>>>> ee7ab02... agregar la opcion llamadas local e informacion de la aplicacion
        android:label="@string/menu_locales"
        tools:layout="@layout/fragment_locales" />
    <!--fragment
        android:id="@+id/nav_contactos"
        android:name="com.example.brigadauniversitaria.Fragments.ContactosFragment"
        android:label="@string/menu_contactos"
<<<<<<< HEAD
        tools:layout="@layout/fragment_notif" />
    <fragment
        android:id="@+id/nav_informacion"
        android:name="com.example.brigadauniversitaria.Fragments.InformacionFragment"
=======
        tools:layout="@layout/item_contacts" /-->
    <fragment
        android:id="@+id/nav_informacion"
        android:name="com.example.brigadauniversitaria.General"
>>>>>>> ee7ab02... agregar la opcion llamadas local e informacion de la aplicacion
        android:label="@string/menu_informacion"
        tools:layout="@layout/fragment_informacion" />



</navigation>