<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/item_height_threeline"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingTop="@dimen/item_pading_vertical"
    android:clickable="true"
    android:focusable="true"
    android:background="@color/color_background">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/imgFoto"
        android:layout_width="@dimen/img_item_size"
        android:layout_height="@dimen/img_item_size"
        android:src="@drawable/ic_account_box"
        android:layout_marginStart="@dimen/item_padding_horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="@dimen/item_padding_horizontal" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/chat_cont"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/chat_cont"
        android:gravity="center"
        android:textSize="@dimen/item_text_size_secondary"
        android:layout_marginEnd="@dimen/item_padding_horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginRight="@dimen/item_padding_horizontal"
        />
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvNombre"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/chat_nombre"
        android:textAppearance="@style/itemLarge"
        android:layout_marginStart="@dimen/item_padding_horizontal"
        android:layout_marginEnd="@dimen/item_padding_horizontal"
        app:layout_constraintStart_toEndOf="@+id/imgFoto"
        app:layout_constraintEnd_toStartOf="@id/chat_cont"
        app:layout_constraintTop_toTopOf="parent"/>
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/mensaje"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/chat_mensaje"
        android:textAppearance="@style/itemMedium"
        android:layout_marginBottom="@dimen/item_padding_horizontal"
        app:layout_constraintTop_toBottomOf="@id/tvNombre"
        app:layout_constraintStart_toEndOf="@+id/imgFoto"
        app:layout_constraintEnd_toStartOf="@id/chat_cont"/>



</androidx.constraintlayout.widget.ConstraintLayout>