<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/contentMain"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:paddingStart="@dimen/margin_horizontal_profile"
    android:paddingEnd="@dimen/margin_horizontal_profile"
    tools:context=".profileModule.view.PerfilFragment">
        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding_vertical_imgProfile">
            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/imgProfile"
                android:layout_width="@dimen/profile_size_img"
                android:layout_height="@dimen/profile_size_img"
                android:src="@drawable/ic_image"
                app:civ_border_width="@dimen/common_border_img"
                app:civ_border_color="@color/purple_500"/>
            <androidx.constraintlayout.utils.widget.ImageFilterButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btnEditPhoto"
                android:layout_gravity="center"
                android:contentDescription="@string/description_img_profile"
                android:src="@android:drawable/ic_menu_upload"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:visibility="gone"/>
            <androidx.core.widget.ContentLoadingProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/progressBarImage"
                android:layout_gravity="center"
                android:visibility="gone"
                style="?android:attr/progressBarStyleSmall"/>
        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:counterEnabled="true">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:id="@+id/etUsername"
                    android:layout_height="wrap_content"
                    android:hint="@string/profile_hint_username"
                    android:gravity="center"
                    android:inputType="textPersonName"
                    android:imeOptions="actionDone"
                    android:enabled="false"/>
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.core.widget.ContentLoadingProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/progressBar"
                android:layout_gravity="center"
                android:visibility="gone"
                style="?android:attr/progressBarStyleSmall"/>

        </FrameLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/etEmail"
                android:hint="@string/common_label_email"
                android:gravity="center"
                android:enabled="false"/>
        </com.google.android.material.textfield.TextInputLayout>
</androidx.appcompat.widget.LinearLayoutCompat>